--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -1,1 +1,7 @@
-Buahahahas
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}" />
+
+<div class="asd">
+    elo
+</div>
