--- a/login/static/css/login.css
+++ b/login/static/css/login.css
@@ -1,5 +1,50 @@
-.asd{
-    display: block;
+body {
+    background-image: url("../img/bg_login2.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
+}
 
+.login {
+    display: inline-block;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 200px;
+    height: 150px;
+    margin: auto;
+}
+
+.btn {
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Courier New;
+    color: #ffffff;
+    font-size: 20px;
+    background: #c27b00;
+    padding: 5px 15px 5px 15px;
+    border: solid #4d4a4d 2px;
+    text-decoration: none;
+}
+
+.btn:hover {
+    background: #ff9900;
+    text-decoration: none;
+}
+
+.label2 {
+    display: block;
+    width: 260px;
+    padding: 100px;
+    color: #3b3b3b;
+    font-size: 16px;
+    text-shadow: 0 0 1px silver;
+}
+
+.asd {
+    display: block;
     border: 1px solid red;
 }
