--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -1,7 +1,17 @@
 {% load static %}
-
+<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-reboot.min.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-grid.min.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}" />
 
-<div class="asd">
-    elo
+<div id="panel" class="login">
+    <form>
+        <p for="username" class="label2">Login</p>
+        <input type="text" id="username" name="username">
+        <p for="password" class="label2">Hasło:</p>
+        <input type="password" id="password" name="password">
+        <div id="lower">
+            <input type="submit" value="Login">
+        </div>
+    </form>
 </div>
