--- a/login/static/login/css/login.css
+++ b/login/static/login/css/login.css
@@ -1,6 +1,8 @@
-body {
+.allContent {
+    background-color: #3b3b3b;
     background-image: url("../img/bg_login2.jpg");
     background-repeat: no-repeat;
+    display: block;
     background-position: center;
     background-size: 100% 100%;
 }
