--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <div id="panel" class="login">
-        <form>
-            <p for="username" class="label2">Login</p>
+    <div  class="loginPanel alt">
+        <form class="loginForm alt">
+            <p for="username" class="formLabel">Login</p>
             <input type="text" id="username" name="username">
             <p for="password" class="label2">Hasło:</p>
             <input type="password" id="password" name="password">
