--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -12,14 +12,15 @@
 </head>
 
 <body>
-    <div  class="loginPanel alt">
-        <form class="loginForm alt">
+    <div  class="loginPanel">
+        <form method="post" class="loginForm">
             <p for="username" class="formLabel">Login</p>
-            <input type="text" id="username" name="username">
-            <p for="password" class="label2">Hasło:</p>
-            <input type="password" id="password" name="password">
+            <input type="text" id="username" name="username" class="textbox">
+            <br>
+            <p for="password" class="formLabel">Hasło:</p>
+            <input type="password" id="password" name="password" class="textbox">
             <div id="lower">
-                <input type="submit" value="Login">
+                <input type="submit" value="Login" class="logButton">
             </div>
         </form>
     </div>
