--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'login/css/bootstrap-reboot.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'login/css/bootstrap-grid.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'login/css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'login/css/login.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'login/css/index.css' %}" />
 
 </head>
 
@@ -20,7 +20,7 @@
             <p for="password" class="formLabel">Hasło:</p>
             <input type="password" id="password" name="password" class="textbox">
             <div id="lower">
-                <input type="submit" value="Login" class="logButton">
+                <input type="submit" value="Zaloguj" class="logButton">
             </div>
         </form>
     </div>
