--- a/static/login/css/register.css
+++ b/static/login/css/register.css
@@ -1,34 +1,28 @@
 body {
     background-color: #3b3b3b;
     background-image: url("../img/bg_login2.jpg");
-    background-repeat: no-repeat;
     background-position-x: center;
     background-size: cover;
+    background-attachment: fixed;
 }
-
-.loginPanel {
-    display: inline-block;
-    width: 200px;
-    height: 180px;
-    position: fixed;
-    top: 80;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+.registerPanel {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: auto;
 }
-
-.formLabel {
-    color: rgb(61, 61, 61);
+.formLabel{
+    margin-bottom: 0.2rem;
+    margin-top: 0.9rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #3b3b3b;
     display: block;
-    margin-left: 25%;
-    margin-bottom: 2px;
-    padding: 0px 20px;
-    font-size: 20px;
+    font-size: 150%;
     text-shadow: 0 0 1px silver;
     font-weight: bold;
 }
-
 .textbox{
     display: block;
     -webkit-box-sizing: content-box;
@@ -45,33 +39,56 @@ body {
     -webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
     box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) inset;
     text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
-    width:97%;
+    width:25%;
     height:30px;
     margin-right: auto;
     margin-left: auto;
+    padding-left: 1rem;
 }
-
-.logButton {
+.textbox:hover{
+    border-color: #8a8a8a;
+}
+.button {
     margin-top:30px;
     -webkit-border-radius: 8;
     -moz-border-radius: 8;
     border-radius: 8px;
     font-family: Georgia;
+    font-weight: bold;
     color: #000000;
-    font-size: 20px;
+    font-size: 150%;
     background: #e08600;
-    padding: 5px 20px 5px 20px;
-    border: solid #474747 3px;
+    border: solid rgba(96,96,96,1) 3px;
     text-decoration: none;
-    width: 100%;
-  }
+    width: 20%;
+}
   
-  .logButton:hover {
-    background: #eb9d00;
-    text-decoration: none;
-  }
+.button:hover {
+background: #eb9d00;
+text-decoration: none;
+}
 
-.alt {
-    display: block;
-    border: 1px solid red;
+@media screen and (max-width: 766px){
+    .registerPanel {
+        width: 60%;
+    }
+    .formLabel {
+        font-size: 200%;
+    }
+    .textbox{
+        height: 2rem;
+        width: 50%;
+    }
+    .button{
+        width: 50%;
+    }
+    .container{
+        margin-top:4rem;
+    }
+}
+@media screen and (max-width: 576px){
+    .textbox{
+        height: 2.5rem;
+        width: 90%;
+    }
 }
