--- a/templates/login/changePassword.html
+++ b/templates/login/changePassword.html
@@ -1,20 +1,22 @@
+{% load staticfiles %}
+
+<!DOCTYPE html>
 <html>
 
 <head>
     <title>MY SITE</title>
 
-    {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'login/css/bootstrap-reboot.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'login/css/bootstrap-grid.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'login/css/bootstrap.min.css' %}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="{% static 'login/css/bootstrap-reboot.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'login/css/bootstrap-grid.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'login/css/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'login/css/changePassword.css' %}" />
 
 </head>
 
 <body>
-    <div  class="mainPanel">
-        <form method="post" class="loginForm">
-
+    <section class="mainPanel">
+        <form method="post">
             <p for="oldPassword" class="formLabel">Stare Hasło</p>
             <input type="password" id="oldPassword" name="oldPassword" class="textbox">
             <p for="newPassword" class="formLabel">Nowe Hasło</p>
@@ -22,11 +24,11 @@
             <p for="confirmPassword" class="formLabel">Potwierdź Hasło</p>
             <input type="password" id="confirmPassword" name="confirmPassword" class="textbox">
             
-            <div id="lower">
-                <input type="submit" value="Wyślij" class="logButton">
+            <div id="lower" class="bottom">
+                <input type="submit" value="Wyślij" class="button">
             </div>
         </form>
-    </div>
+    </section>
 
 </body>
 
