Main map template

--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -21,7 +21,7 @@
             {% csrf_token %}
 
             {{ form }}
-            <p for="username" class="formLabel">Login</p>
+            <p for="username" class="formLabel">Logisssn</p>
             <input type="text" id="username" name="username" class="textbox">
             <br>
             <p for="password" class="formLabel">Hasło:</p>
