--- a/templates/login/index.html
+++ b/templates/login/index.html
@@ -22,7 +22,7 @@
             <p for="password" class="formLabel"> Hasło </p>
             <input type="password" id="password" name="password" required="true" placeholder="Wprowadź hasło" class="textbox">
 
-            <small>Nie masz konta? <a href="/register" class="alert-link">Zarejestruj się</a></small>
+            <small>Nie masz konta? <a href="/register" class="alert-link">Zarejestrucj się</a></small>
 
             <div id="lower">
                 <input type="submit" value="Zaloguj" formaction="main/" class="logButton">
