--- a/static/main/css/index.css
+++ b/static/main/css/index.css
@@ -4,70 +4,43 @@ body {
     background-position-x: center;
     background-size: cover;
     background-attachment: fixed;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #3b3b3b;
+    font-size: 15px;
+    min-width: 850px;
+}
+.container{
+    padding: 10px 10% 0 10%;
 }
 
-#main{
-    width: 900px;
-    max-height: 600px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#header{
-    width: auto;
-    width: 900px;
-    height: 240px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-}   
-
+/* HEADER */
+/* AVATAR */
 .avatar{
-    display: inline-block;
-    width: 20%;
-    height: 100%;
     background-image: url("../img/avatar.png");
     background-size: 100% 100%;
-    float: left;
-    position: relative;
-
+    padding: 0;
 }
-
 .avatarName{
     width: 100%;
     text-align: center;
     position: absolute;
-    bottom: 5%;
-    height: 20%;
-    padding-left: 12%;
-    padding-right: 9%;
-}
-
-.avatarName p{
+    bottom: 7%;
     font-size: 17px;
     font-weight: bold;
-    margin: 0;
     line-height: 1.1;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
-.statistic{
-    display: inline-block;
-    margin-left: 2%;
-    height: 100%;
-    margin-right: 2%;
-    width: 56%;
+/* STATS */
+.stats{
     background-image: url("../img/bg_statistic.png");
     background-size: 100% 100%;
-    padding: 3% 8% 4% 6%;
-}
-
-.font-georgia {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #3b3b3b;
-    font-size: 15px;
+    padding: 5% 10% 2% 10%;
 }
 .potion{
-    width: 20px;
+    float: right;
+    align: top;
 }
 .progress{
     margin-top: 1%;
@@ -100,9 +73,8 @@ body {
     padding-right:10%;
     line-height: normal;
 }
+/* MENU */
 .menu{
-    width: 20%;
-    height: 100%;
     background-image: url("../img/bg_other.png");
     background-size: 100% 100%;
     float: right;
@@ -114,7 +86,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    padding-top: 15%;
+    padding-top: 25px;
 }
 
 .menu ul li{
@@ -122,64 +94,81 @@ body {
 }
 
 .menu ul li img{
-   width: 40px;
-   margin-top: 3%;
+   width: 35px;
+   margin-top: 5%;
    cursor: pointer;
 }
 
+/* MAP */
 .map{
-    position: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 900px;
-    max-width: 1000px;
-    height: 700px;
-    min-height: 500px;
-    max-height: 1000px;
-    margin-top: 3%;
     background-image: url("../img/bg_map.png");
     background-size: 100% 100%;
+    height: 700px;
+    margin-top: 20px;
+    position: relative;
 }
-
+.map img{
+    position: absolute;
+}
 .lesson1{
-    height:40%;
-    width: 40%;
-    margin-left: 5%;
-    margin-top: 1%;
-} 
-
-.lesson2{
-    height: 20%;
-    width: 60%;
-    margin-left: -30%;
-    margin-top: 8%;
+    margin-top: 10px;
+    margin-left: 30px;
+    width: 400px;
 }
-
+.lesson2{
+    margin-top: 105px;
+    margin-left: 155px;
+    width: 480px;
+}
 .lesson3{
-    height: 50%;
-    width: 68%;
-    margin-left: 27%;
-    margin-top: -10%;
+    margin-top:210px;
+    margin-left: 233px;
+    width: 560px;
 }
 .lesson4{
-    height: 50%;
-    width: 85%;
-    margin-left: 8%;
-    margin-top: -24%;
+    margin-top:352px;
+    margin-left: 75px;
+    width: 700px;
 }
 .lesson5{
-    height: 25%;
-    width: 45%;
-    margin-left: 26%;
-    margin-top: -24%;
+    margin-top:482px;
+    margin-left: 228px;
+    width: 355px;
 }
 .lesson6{
-    height: 36%;
-    width: 45%;
-    margin-left: 52%;
-    margin-top: -32%;
+    margin-top:408px;
+    margin-left: 453px;
+    width: 340px;
 }
-
+.top{
+    width: 3.5rem;
+    z-index: 1;
+    cursor: pointer;
+}
+.xmark1{
+    margin-top: 200px;
+    margin-left: 170px;
+}
+.xmark2{
+    margin-top: 190px;
+    margin-left: 540px;
+}
+.xmark3{
+    margin-top: 330px;
+    margin-left: 680px;
+}
+.xmark4{
+    margin-top: 580px;
+    margin-left: 220px;
+}
+.xmark5{
+    margin-top: 560px;
+    margin-left: 430px;
+}
+.xmark6{
+    margin-top: 550px;
+    margin-left: 580px;
+}
 .alt{
     border: 2px solid red;
 
@@ -188,24 +177,18 @@ body {
     border: 2px solid green;
 
 }
-@media screen and (max-width: 1000px){
-    #main {
-        width: 600px;
-    }
-    #header {
-        width: 600px;
-        height: 150px;
-    }
-    .map {
-        width: 600px;
-    }
-    .menu ul li img{
-        width: 20px;
-        margin-top: 3%;
-        cursor: pointer;
-     }
-    .avatarName p{
-        font-size: 14px;
+@media screen and (max-width: 991px){
+    .container{
+        padding: 10px 2% 0 2% !important;
     }
 }
-
+@media (min-width: 576px){
+    .container {
+    max-width: 100%;
+    }
+}
+@media (min-width: 1200px){
+    .container {
+    max-width: 1140px;
+    }
+}
