--- a/static/css/lesson.css
+++ b/static/css/lesson.css
@@ -11,10 +11,6 @@ body {
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    height: 100%;
-    min-height: 80%;
-    min-width: 270px;
-    padding: 8rem 5rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #3b3b3b;
 }
@@ -30,7 +26,7 @@ body {
 }
 .image{
     display: inline;
-    min-width: 80px;
+    width: 100px;
 }
 .lesson {
     margin-left: 20%;
@@ -41,10 +37,12 @@ body {
     display: inline;
 }
 .lessonInfo-Number{
-    font-size: 2vw;
+    display: block;
+    font-size: 1.8vw;
 }
 .lessonInfo-Name{
-    font-size: 2.5vw;
+    display: block;
+    font-size: 2.2vw;
     font-weight: bold;
 }
 
@@ -148,14 +146,3 @@ body {
         font-weight: bold;
     }
 }
-@media screen and (max-width: 576px){
-    .lesson{
-        margin: 1rem 1rem;
-    }
-}
-@media screen and (min-width: 768px){
-    .lesson-section{
-        width:70%;
-    }
-}
-
