--- a/templates/login/index.html
+++ b/templates/login/index.html
@@ -6,10 +6,10 @@
 
     {% load staticfiles %}
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="{% static 'login/css/bootstrap-reboot.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'login/css/bootstrap-grid.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'login/css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'login/css/index.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-reboot.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-grid.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}" />
 
 </head>
 
