--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -6,8 +6,8 @@
 
     {% load staticfiles %}
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="{% static 'login/css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'login/css/register.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/register.css' %}" />
 
 </head>
 
