--- a/templates/main/playerProfile.html
+++ b/templates/main/playerProfile.html
@@ -1,138 +1,119 @@
-<!DOCTYPE html>
-<html lang="pl-PL">
+{% extends "main/base.html" %}
 
-<head>
-    <title>PLAYER PROFILE</title>
-
-    {% load staticfiles %}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% block content %}
+<div class="board">
+    <h1 class="text-center">Profil Gracza</h1>
     
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'main/css/playerProfile.css' %}" />
+    <div class="container tabs">
+        <ul id="navProfile" class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#excercises">Zadanie główne</a></li>
+            <li><a data-toggle="tab" href="#challenges">Wyzwania</a></li>
+            <li><a data-toggle="tab" href="#presences">Obecności</a></li>
+            <li><a data-toggle="tab" href="#medals">Medale</a></li>
+            <li><a data-toggle="tab" href="#rating">Ocena</a></li>
+        </ul>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+        <div class="tab-content tabBorder">
+            <div id="excercises" class="tab-pane fade in active">
+                <h1 class="text-center">Wyniki z zadań głównych</h1>
+                <div class="table-responsive">
+                    <table class="table table-bordered">
+                        <thead class="tableHeader">
+                            <tr>
+                                <th>#</th>
+                                <th>Lekcja</th>
+                                <th>Numer Zadania</th>
+                                <th>Wynik [%]</th>
+                                <th>
+                            </tr>
+                        </thead>
+                        <tbody align="center">
+                            <tr>
+                                <td>1
+                                <td>1
+                                <td>1
+                                <td>100%
+                                <td>
+                                    <button class="btn btn-info" data-toggle="collapse" data-target="#details">Szczegóły</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td id="detailsTd" colspan="5">
+                                    <div id="details" class="collapse">
 
-<body>
-<section>
-    <div class="container  px-md-5 board">
-        <h1 class="text-center">Profil Gracza</h1>
-        
-        <div class="container tabs">
-            <ul id="navProfile" class="nav nav-tabs nav-justified">
-                <li class="active"><a data-toggle="tab" href="#excercises">Zadanie główne</a></li>
-                <li><a data-toggle="tab" href="#challenges">Wyzwania</a></li>
-                <li><a data-toggle="tab" href="#presences">Obecności</a></li>
-                <li><a data-toggle="tab" href="#medals">Medale</a></li>
-                <li><a data-toggle="tab" href="#rating">Ocena</a></li>
-            </ul>
+                                        <h3>Treść zadania:</h3>
+                                        <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin tristique diam in elementum. Donec blandit magna sed nisi sollicitudin elementum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse id tempus libero, porta euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque faucibus urna metus, vitae posuere diam maximus et. Praesent tristique aliquet condimentum.</span>
+                                    
+                                        <h3>Odpowiedź:</h3>
+                                        <p class="small text-justify">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse id tempus libero, porta euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque faucibus urna metus, vitae posuere diam maximus et. Praesent tristique aliquet condimentum.</p>
+                                    
+                                    </div>
+                                </td>
+                            </tr>
 
-            <div class="tab-content tabBorder">
-                <div id="excercises" class="tab-pane fade in active">
-                    <h1 class="text-center">Wyniki z zadań głównych</h1>
-                    <div class="table-responsive">
-                        <table class="table table-bordered">
-                            <thead class="tableHeader">
+                            <tr>
+                                <td>{{elo}}
+                                <td>2
+                                <td>2
+                                <td>90%
+                                <td>
+                                    <button class="btn btn-info">Szczegóły</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div>
+                    <p class="h3 average" align="center">Średnia z zadań: 77%</p>
+                </div>
+            </div>
+            
+            <!-- WYZWANIA -->
+            <div id="challenges" class="tab-pane fade">
+                <h1 class="text-center">Wyzwania</h1>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+
+            <!-- OBECNOŚCI -->
+            <div id="presences" class="tab-pane fade">
+                <h1 class="text-center">Obecności</h1>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+            </div>
+
+            <!-- MEDALE -->
+            <div id="medals" class="tab-pane fade">
+                <h1 class="text-center">Medale</h1>
+                <p>Aktualnie nie posiadasz żadnych medali.</p>
+                <div class="table-responsive">
+                    <table class="table table-bordered">
+                            <thead align="right">
                                 <tr>
-                                    <th>#</th>
-                                    <th>Lekcja</th>
-                                    <th>Numer Zadania</th>
-                                    <th>Wynik [%]</th>
                                     <th>
+                                    <th>Nazwa
+                                    <th>Opis
+                                    <th>Bonus
                                 </tr>
                             </thead>
-                            <tbody align="center">
-                                <tr>
-                                    <td>1
-                                    <td>1
-                                    <td>1
-                                    <td>100%
-                                    <td>
-                                        <button class="btn btn-info" data-toggle="collapse" data-target="#details">Szczegóły</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td id="detailsTd" colspan="5">
-                                        <div id="details" class="collapse">
-
-                                            <h3>Treść zadania:</h3>
-                                            <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin tristique diam in elementum. Donec blandit magna sed nisi sollicitudin elementum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse id tempus libero, porta euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque faucibus urna metus, vitae posuere diam maximus et. Praesent tristique aliquet condimentum.</span>
-                                        
-                                            <h3>Odpowiedź:</h3>
-                                            <p class="small text-justify">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse id tempus libero, porta euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque faucibus urna metus, vitae posuere diam maximus et. Praesent tristique aliquet condimentum.</p>
-                                        
-                                        </div>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>2
-                                    <td>2
-                                    <td>2
-                                    <td>90%
-                                    <td>
-                                        <button class="btn btn-info">Szczegóły</button>
-                                    </td>
-                                </tr>
+                            <tbody>
+                            <tr>
+                                <td  class="medalImageField"><img class="medalImage" src="../../static/img/Medals/medal_bear.png">
+                                <td>„Odważny jak niedźwiedź”
+                                <td>Przydzielany automatycznie przez system za udział w wzywaniu
+                                <td>+5 punktów rankingowych
+                            </tr>
                             </tbody>
                         </table>
-                    </div>
-                    <div>
-                        <p class="h3 average" align="center">Średnia z zadań: 77%</p>
-                    </div>
-                </div>
-                
-                <!-- WYZWANIA -->
-                <div id="challenges" class="tab-pane fade">
-                    <h1 class="text-center">Wyzwania</h1>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
 
-                <!-- OBECNOŚCI -->
-                <div id="presences" class="tab-pane fade">
-                    <h1 class="text-center">Obecności</h1>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                    </table>
                 </div>
+            </div>
 
-                <!-- MEDALE -->
-                <div id="medals" class="tab-pane fade">
-                    <h1 class="text-center">Medale</h1>
-                    <p>Aktualnie nie posiadasz żadnych medali.</p>
-                    <div class="table-responsive">
-                        <table class="table table-bordered">
-                                <thead align="right">
-                                    <tr>
-                                        <th>
-                                        <th>Nazwa
-                                        <th>Opis
-                                        <th>Bonus
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                    <td  class="medalImageField"><img class="medalImage" src="../../static/main/img/Medals/medal_bear.png">
-                                    <td>„Odważny jak niedźwiedź”
-                                    <td>Przydzielany automatycznie przez system za udział w wzywaniu
-                                    <td>+5 punktów rankingowych
-                                </tr>
-                                </tbody>
-                            </table>
-
-                        </table>
-                    </div>
-                </div>
-
-                <!-- OCENA -->
-                <div id="rating" class="tab-pane fade">
-                    <h1 class="text-center">Ocena</h1>
-                    <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                </div>
+            <!-- OCENA -->
+            <div id="rating" class="tab-pane fade">
+                <h1 class="text-center">Ocena</h1>
+                <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
             </div>
         </div>
     </div>
-</section>
-</body>
-
-</html>
+</div>
+{% endblock %}
