Add auth and change account_details model

--- a/templates/login/index.html
+++ b/templates/login/index.html
@@ -15,7 +15,11 @@
 
 <body>
     <section class="loginPanel">
-        <form method="post" class="loginForm">
+        <form method="post" class="loginForm" action="">
+            {% csrf_token %}
+            {% if message  %}
+                <p class="alert alert-danger">{{ message }}</p>
+            {% endif %}
             <p for="username" class="formLabel"> Login </p>
             <input type="text" id="username" name="username" required="true" placeholder="Wprowadź login" class="textbox">
 
@@ -25,7 +29,7 @@
             <small>Nie masz konta? <a href="/register" class="alert-link">Zarejestrucj się</a></small>
 
             <div id="lower">
-                <input type="submit" value="Zaloguj" formaction="main/" class="logButton">
+                <input type="submit" value="Zaloguj"class="logButton">
             </div>
         </form>
     </section>
