--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -74,7 +74,7 @@
 
             <div id="menu" class="menu col-2">
                 <ul>
-                    <a href="/"><li><img src="../../static/img/student_logout.png" alt="Wyloguj"></li></a>
+                    <a href="{% url 'login:logout' %}"><li><img src="../../static/img/student_logout.png" alt="Wyloguj"></li></a>
                     <a href="/main/playerProfile"><li><img src="../../static/img/settings.png" alt="Ustawienia"></li></a>
                     <a href=""><li><img src="../../static/img/message.png" alt="Wiadomości"></li></a>
                     <a href="/main/"><li><img src="../../static/img/challenge.png" alt="Wyzwania"></li></a>
