--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -6,9 +6,9 @@
         {% for level in levels %}
             <img src="../../static/img/lesson{{level}}.png" class="lesson{{level}}">
             {% if level != levels|last %}
-                <a href="/main/lesson/"><img src="../../static/img/okmark.png" class="mark{{level}} top"></a>
+                <a href="/main/lesson/{{level}}"><img src="../../static/img/okmark.png" class="mark{{level}} top"></a>
             {% else %}
-                <a href="/main/lesson/"><img src="../../static/img/xmark.png" class="mark{{level}} top"></a>
+                <a href="/main/lesson/{{level}}"><img src="../../static/img/xmark.png" class="mark{{level}} top"></a>
             {% endif %}
         {% endfor %}
     </div>
