--- a/templates/main/lesson.html
+++ b/templates/main/lesson.html
@@ -7,7 +7,7 @@
       <div class="container board px-md-5">
 
         <div class="title pb-3" align="center">
-          <span class="h1">Lekcja 1</span>
+          <span class="h1">Etap {{stage.id}} : {{stage.name}}</span>
         </div>
 
         <div id="myBtn" class="row lesson">
@@ -60,7 +60,7 @@
       <div class="container modal-body">
         <div align="center">
           <span class="close">&times;</span>
-          <h2>Zadanie 1</h2>
+          <h2>Etap : {{stage_name}}</h2>
           <h1>List</h1>
         </div>
         <p class="excerciseContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
