--- a/templates/admin/groups.html
+++ b/templates/admin/groups.html
@@ -31,7 +31,7 @@
                 </table>
                 <form>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Nazwa</label>
+                        <label>Nazwa</label>
                         <input class="form-control" placeholder="Nazwa grupy..." required>
                     </div>
                     <button type="submit" class="btn btn-primary">Stwórz grupę</button>
