--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -7,35 +7,50 @@
     {% load staticfiles %}
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="{% static 'cssbootstrap-reboot.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap-reboot.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/bootstrap-grid.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/adminBase.css' %}" />
     <link rel="stylesheet" href="{% static 'css/groups.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/responses.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/excercises.css' %}" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
         <div class="wrapper">
-                <aside class="main_sidebar">
-                    <ul>
-                        <span class="logo">VIKINGS</span>
-                        <li class="active"><i class="fa fa-users"></i><a href="#">Grupy</a></li>
-                        <li><i class="fa fa-briefcase"></i><a href="#">Ćwiczenia</a></li>
-                        <li><i class="fa fa-bell"></i><a href="#">Wyzwania</a></li>
-                        <li><i class="fa fa-pencil"></i><a href="#">Rozwiązania</a></li>
-                        <li><i class="fa fa-envelope"></i><a href="#">Wiadomości</a></li>
-                        <li><i class="fa fa-edit"></i><a href="#">Edycja</a></li>
-                        <li><i class="fa fa-sign-out"></i><a href="#">Wyloguj</a></li>
-                    </ul>
-                </aside>
-            </div>
-            <div class="mainPlace">
-                {% block content %}{% endblock %}
-            </div>
+            <aside class="main_sidebar">
+                <ul id="myDIV">
+                    <span class="logo">VIKINGS</span>
+                    <li class="active"><i class="fa fa-users"></i><a href="/adminSite">Grupy</a></li>
+                    <li><i class="fa fa-briefcase"></i><a href="/adminSite/excercises">Ćwiczenia</a></li>
+                    <li><i class="fa fa-bell"></i><a href="#">Wyzwania</a></li>
+                    <li><i class="fa fa-pencil"></i><a href="/adminSite/responses">Rozwiązania</a></li>
+                    <li><i class="fa fa-envelope"></i><a href="#">Wiadomości</a></li>
+                    <li><i class="fa fa-edit"></i><a href="#">Edycja</a></li>
+                    <li><i class="fa fa-sign-out"></i><a href="#">Wyloguj</a></li>
+                </ul>
+            </aside>
+        </div>
+        <div class="mainPlace">
+            {% block content %}{% endblock %}
+        </div>
     
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        // Add active class to the current button (highlight it)
+        var header = document.getElementById("myDIV");
+        var btns = header.getElementsByTagName("li");
+        for (var i = 0; i < btns.length; i++) {
+          btns[i].addEventListener("click", function() {
+            var current = document.getElementsByClassName("active");
+            console.log(current);
+            current[0].className = current[0].className.replace("active", "");
+            this.className += " active";
+          });
+        }
+        </script>
 </body>
 </html>
