--- a/templates/main/lesson.html
+++ b/templates/main/lesson.html
@@ -10,13 +10,13 @@
           <span class="h1">Etap {{stage.id}} : {{stage.name}}</span>
         </div>
         {% for task in tasks %}
-          <div id="myBtn" class="row lesson">
+          <div id="myBtn" taskId="{{forloop.counter}}" class="row lesson">
             <div class="col-3 align-self-center">
               <img class="image" src="../../static/img/zad1_{{ forloop.counter}}.png">
             </div>
             <div class="col-9 lessonInfo align-self-center pt-md-1" align="center">
               <span class="d-block lessonInfo-Number">Zadanie {{ forloop.counter }}</span>
-              <span class="d-block lessonInfo-Name">List</span>
+              <span class="d-block lessonInfo-Name">{{task.title}}</span>
             </div>
           </div>
         {% endfor %}
@@ -62,7 +62,7 @@
       <div class="container modal-body">
         <div align="center">
           <span class="close">&times;</span>
-          <h2>Etap : {{stage_name}}</h2>
+          <h2>Etap : {{stage.name}}</h2>
           <h1>List</h1>
         </div>
         <p class="excerciseContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -102,6 +102,9 @@
   // When the user clicks the button, open the modal 
   btn.onclick = function() {
       modal.style.display = "block";
+      var taskId = $(this).attr("taskId");
+      console.log(taskId);
+      $.get("/main/lesson/{{stage.id}}/",{task_id: taskId},function(data){});
   }
   
   // When the user clicks on <span> (x), close the modal
