drobne poprawki front-end

--- a/templates/main/playerProfile.html
+++ b/templates/main/playerProfile.html
@@ -29,10 +29,10 @@
                         </thead>
                         <tbody align="center">
                             <tr>
-                                <td>1
-                                <td>1
-                                <td>1
-                                <td>100%
+                                <td>1 </td>
+                                <td>1 </td>
+                                <td>1 </td>
+                                <td>100% </td>
                                 <td>
                                     <button class="btn btn-info" data-toggle="collapse" data-target="#details">Szczegóły</button>
                                 </td>
@@ -42,7 +42,7 @@
                                     <div id="details" class="collapse">
 
                                         <h3>Treść zadania:</h3>
-                                        <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin tristique diam in elementum. Donec blandit magna sed nisi sollicitudin elementum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse id tempus libero, porta euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque faucibus urna metus, vitae posuere diam maximus et. Praesent tristique aliquet condimentum.</span>
+                                        <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sollicitudin tristique diam in elementum. Donec blandit magna sed nisi sollicitudin elementum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse id tempus libero, porta euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque faucibus urna metus, vitae posuere diam maximus et. Praesent tristique aliquet condimentum. </p>
                                     
                                         <h3>Odpowiedź:</h3>
                                         <p class="small text-justify">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse id tempus libero, porta euismod enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque faucibus urna metus, vitae posuere diam maximus et. Praesent tristique aliquet condimentum.</p>
@@ -52,10 +52,10 @@
                             </tr>
 
                             <tr>
-                                <td>{{elo}}
-                                <td>2
-                                <td>2
-                                <td>90%
+                                <td>{{elo}} </td>
+                                <td>2 </td>
+                                <td>2 </td>
+                                <td>90% </td>
                                 <td>
                                     <button class="btn btn-info">Szczegóły</button>
                                 </td>
@@ -99,7 +99,7 @@
                                 {% for achievement in achievements %}
                                     <tbody>
                                     <tr>
-                                        <td  class="medalImageField"><img class="medalImage" src="../../static/img/Medals/{{achievement.picture}}">
+                                        <td  class="medalImageField"><img class="medalImage" src="../../static/img/Medals/{{achievement.picture}}"> </td>
                                         <td>„{{achievement.name}}” </td>
                                         <td>{{achievement.description}} </td>
                                         <td>+ {{achievement.points}} punktów rankingowych </td>
