--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/index.css' %}" />
     <link rel="stylesheet" href="{% static 'css/playerProfile.css' %}" />
     <link rel="stylesheet" href="{% static 'css/lesson.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/messages.css' %}" />
 </head>
 
 <body>
